feat: added auto event map loading if unloaded